# CookJoke

./: .coveralls.yml  .gitignore  README.MD  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: tests.yml
src/: example.py  main.py
src/CookJoke/: __init__.py
test/: test_cook_unittest.py  test_laugh.py
