[tool.poetry]
name = "CookJoke"
version = "0.2.1"
description = "Software implementation of cook joke"
authors = ["Ivan Vasilev <ivan.vasilev.cn@gmail.com>"]
repository = "https://github.com/cl1ckname/CookJoke"
license = "MIT"
readme = "README.md"
include = [
	"LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
